src/objects/Prior__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Prior</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field__c</columns>
        <columns>Object__c</columns>
        <columns>Probability__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Prior - {0}</displayFormat>
        <label>Priors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>